Feature: index.html新增一个猫，添加名字，显示点击数

--- a/index.html
+++ b/index.html
@@ -8,15 +8,33 @@
 </head>
 
 <body>
-  <article class="">
-    <img id="catPic" src="images/cat.jpg" alt="猫">
-  </article>
-  <section>
-    点击数
-    <span id="clickedCount">0</span>
-  </section>
+  <main class="mainClass">
+    <div class="catContainer">
+      <p>name:cat1</p>
+      <section class="">
+        <img class="catPhotoStyle" id="catPic1" src="images/cat1.jpg" alt="猫">
+      </section>
+      <section>
+        点击数
+        <span id="clickedCount1">0</span>
+      </section>
+    </div>
 
-<script src="js/main.js"></script>
+    <div class="catContainer">
+      <p>name:cat2</p>
+      <section class="">
+        <img class="catPhotoStyle" id="catPic2" src="images/cat2.jpg" alt="猫">
+      </section>
+      <section>
+        点击数
+        <span id="clickedCount2">0</span>
+      </section>
+    </div>
+
+  </main>
+
+
+  <script src="js/main.js"></script>
 </body>
 
 </html>
