Feature: 新增猫列表，点击猫列表显示对应图片，每个图片有独自的点击数

--- a/index.html
+++ b/index.html
@@ -8,26 +8,23 @@
 </head>
 
 <body>
+  <!-- 侧边猫列表 -->
   <main class="mainClass">
-    <div class="catContainer">
-      <p>name:cat1</p>
-      <section class="">
-        <img class="catPhotoStyle" id="catPic1" src="images/cat1.jpg" alt="猫">
-      </section>
-      <section>
-        点击数
-        <span id="clickedCount1">0</span>
-      </section>
-    </div>
+    <aside class="catlist">
+      <ul id="catList">
+        <li>cat1</li>
+        <li>cat2</li>
+      </ul>
+    </aside>
 
     <div class="catContainer">
-      <p>name:cat2</p>
+      <p>name:<span id="catName">cat1</span></p>
       <section class="">
-        <img class="catPhotoStyle" id="catPic2" src="images/cat2.jpg" alt="猫">
+        <img class="catPhotoStyle" id="catPic" src="images/cat1.jpg" alt="猫">
       </section>
       <section>
         点击数
-        <span id="clickedCount2">0</span>
+        <span id="clickedCount">0</span>
       </section>
     </div>
 
