Refactor: 重构main.js为MVO模型

--- a/index.html
+++ b/index.html
@@ -12,19 +12,16 @@
   <main class="mainClass">
     <aside class="catlist">
       <ul id="catList">
-        <li>cat1</li>
-        <li>cat2</li>
       </ul>
     </aside>
 
     <div class="catContainer">
-      <p>name:<span id="catName">cat1</span></p>
-      <section class="">
-        <img class="catPhotoStyle" id="catPic" src="images/cat1.jpg" alt="猫">
-      </section>
+      <p>name:<span id="catName"></span></p>
+      <p id="imgPart"></p>
+      <!-- <img class="catPhotoStyle" id="catPic" src="images/cat1.jpg" alt="猫"> -->
       <section>
         点击数
-        <span id="clickedCount">0</span>
+        <span id="clickedCount"></span>
       </section>
     </div>
 
