Feature: 新增管理员区域，点击管理员按钮显示区域，点击取消按钮隐藏区域

--- a/index.html
+++ b/index.html
@@ -23,10 +23,19 @@
         点击数
         <span id="clickedCount"></span>
       </section>
+
+      <button type="button" name="button" id="adminBtn">Admin</button>
+      <div class="operateArea" id="adminArea">
+        <section class="inputContainer">name<input type="text" name="" value=""></section>
+        <section class="inputContainer">ImgURL<input type="text" name="" value=""></section>
+        <section class="inputContainer">点击数<input type="text" name="" value=""></section>
+        <section class="buttonArea">
+          <button type="button" name="button" id="cancelBtn">取消</button>
+          <button type="button" name="button">保存</button>
+        </section>
+      </div>
     </div>
-
   </main>
-
 
   <script src="js/main.js"></script>
 </body>
