Feature: 基本实现CatClicker高级专业版功能

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
       <button type="button" name="button" id="adminBtn">Admin</button>
       <div class="operateArea" id="adminArea">
-        <section class="inputContainer">name<input type="text" name="" value=""></section>
-        <section class="inputContainer">ImgURL<input type="text" name="" value=""></section>
-        <section class="inputContainer">点击数<input type="text" name="" value=""></section>
+        <section class="inputContainer">name<input id="nameIpt" type="text" name="" value=""></section>
+        <section class="inputContainer">ImgURL<input id="imgUrlIpt" type="text" name="" value=""></section>
+        <section class="inputContainer">点击数<input id="clickCountIpt" type="text" name="" value=""></section>
         <section class="buttonArea">
           <button type="button" name="button" id="cancelBtn">取消</button>
-          <button type="button" name="button">保存</button>
+          <button type="button" name="button" id="saveBtn">保存</button>
         </section>
       </div>
     </div>
