Feature: 新增knockout control flow结构foreach循环猫名列表

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
   <!-- 侧边猫列表 -->
   <main class="mainClass">
-    <aside class="catlist">
-      <ul id="catList">
+    <aside class="catlist" >
+      <ul data-bind="foreach: cat">
+        <li data-bind="text: catName"></li>
       </ul>
     </aside>
 
